02-Kubernetes/22-Ingress-App-Deployment/03-Multi-Ingress/03-Coffee.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: espresso
spec:
  replicas: 2
  selector:
    matchLabels:
      app: espresso
  template:
    metadata:
      labels:
        app: espresso
    spec:
      containers:
      - name: espresso
        image: nginxdemos/nginx-hello:plain-text
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: espresso-svc
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: espresso
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: latte
spec:
  replicas: 2
  selector:
    matchLabels:
      app: latte
  template:
    metadata:
      labels:
        app: latte
    spec:
      containers:
      - name: latte
        image: nginxdemos/nginx-hello:plain-text
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: latte-svc
  labels:
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: latte
