02-Kubernetes/22-Ingress-App-Deployment/03-Multi-Ingress/04-HeaderBased-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coffee-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: coffee
    http:
      paths:
      - path: /latte
        pathType: Prefix
        backend:
          service:
            name: latte-svc
            port:
              number: 80
      - path: /espresso
        pathType: Prefix
        backend:
          service:
            name: espresso-svc
            port:
              number: 80
